fix css spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
+body{
+    background-color: #f5f5f1;
+}
+
+
 #card-wrapper{
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
 }
 
+#card-wrapper .p-1{
+    background-color: white;
+}
